# flutter_mwebd

./: .gitignore  CHANGELOG.md  README.md  ffigen.yaml  pubspec.yaml
android/: .gitignore  build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/cypherstack/flutter_mwebd_example/: MainActivity.kt
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt
example/linux/flutter/: generated_plugins.cmake
example/linux/runner/: my_application.cc
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: flutter_mwebd.podspec  run_build.sh
ios/Classes/: flutter_mwebd.c
lib/: flutter_mwebd.dart  flutter_mwebd_bindings_generated.dart
lib/src/: exceptions.dart  flutter_mwebd_bindings_generated.dart  server.dart  status.dart
linux/: CMakeLists.txt
macos/: flutter_mwebd.podspec  run_build.sh
src/: CMakeLists.txt  flutter_mwebd.c  flutter_mwebd.h
tool/: build.dart
tool/helpers/: android.dart  ios.dart  linux.dart  macos.dart  util.dart  windows.dart
tools/: build.dart  ios_clang_wrapper.sh
tools/helpers/: macos.dart  util.dart  windows.dart
windows/: CMakeLists.txt
